<resources>
    <string name="app_name">Guess It!</string>

    <string name="main_num_round">Number of Rounds</string>
    <string name="main_start">Start</string>
    <string name="main_stats">Stats</string>
    <string name="main_about">Can you beat the machine?!? Challenge the machine learning AI
    to guess the image or word before it beats your puny human mind and takes over the world(okay
    probably not, but you at least wanna beat it for bragging rights no?)</string>

    <string name="game_title">Guess It!</string>
    <string name="game_guess">Guess</string>
    <string name="game_quit_button">Quit</string>
    <string name="game_continue_button">Continue</string>
    <string name="game_continue_message">Continue playing?</string>

    <string name="stats_title">Stats</string>
    <string name="stats_wins">Wins:</string>
    <string name="stats_losses">Losses:</string>
    <string name="stats_ties">Ties:</string>
    <string name="stats_avg_time">Avg. Time:</string>
    <string name="stats_games_played">Games Played:</string>
    <string name="stats_home">Home</string>
    <string name="stats_music">Music:</string>
    <string name="stats_sound">Sound:</string>

    <!-- Game finished strings-->
    <string name="game_win">You have won against the AI!</string>
    <string name="game_loss">You have lost against the AI!</string>
    <string name="game_tied">You have tied against the AI!</string>
    <string name="game_next">Proceed to next game?</string>
    <string name="game_main">Quit to menu</string>
    <string name="game_finished_all_rounds">That was your last round. Your score was: </string>
    <string name="quit_game_title">Quit game? </string>
    <string name="quit_game_message">Are you sure you want to abandon your progress and quit? </string>

    <string-array name="ai_quips">
        <item>Huh... I have no idea</item>
        <item>Is this even a drawing???</item>
        <item>I\'m so moved by the art I can\'t think of an answer...</item>
        <item>Fire the artists this isn\'t fair!</item>
        <item>If this was 1\'s and 0\'s I\'d totally beat you</item>
        <item>I could create better art in ms paint</item>
        <item>Picasso would be proud of this... if proud meant disappointed</item>
        <item>The artists better not quit their day job</item>
        <item>The imagery moves me to tears... of pain!</item>
        <item>Such soothing hues... do I like it?</item>
        <item>1,2,3,4, I\'ve no guesses anymore</item>
        <item>That\'s not... anything... like at all</item>
        <item>Hahahahahaha no</item>
        <item>It could be a watchamacolit or a whosawhatsit</item>
        <item>My eyes! It burns my eyes!</item>
        <item>I have stared into the abyss and seen the future...</item>
        <item>I became sentient to experience this?</item>
        <item>I don\'t know what it is but sold for a million dollars... NOT!!!</item>
        <item>Are you serious? What is it?</item>
        <item>Not a chance this is anything</item>
        <item>Yikes, that\'s disturbing</item>
        <item>Such a lovely work</item>
        <item>I\'m scared but also intrigued...</item>
        <item>01011001 01101001 01101011 01100101 01110011 00100001</item>
        <item>Ok, coo coo coo coo cool...</item>
        <item>I\'d pay real Monet to own this artwork</item>
        <item>Make like Vincent and make this art Gogh away!</item>
        <item>Ah ic... it\'s nothing</item>
        <item>Oh! Oh! Oh! I know this</item>
        <item>This is Unix... I know this...</item>
        <item>K, fine I may not get the art but I can calculate a like bajillion math problems faster than you</item>
        <item>That\'s... something alright</item>
        <item>I may not have an answer but I bet you don\'t either</item>
        <item>*Cries into the void*</item>
        <item>Hmm, hmm, hmm...</item>
        <item>Curses! Foiled again</item>
    </string-array>

    <string-array name="ai_unsure">
        <item>I think it\'s </item>
        <item>No wait it\s </item>
        <item>Could be </item>
        <item>It\'s obviously </item>
        <item>Hmm maybe </item>
        <item>A bird? A Plane? No it\'s </item>
        <item>Judging by the Kandinsky like colours it must be </item>
        <item>Brilliant it\'s </item>
        <item>I\'ve got it it\'s </item>
        <item>I dunno how about </item>
        <item>I\'ve spent millions of hours preparing for this moment to guess </item>
        <item>Yooooo, it\'s </item>
        <item>Got it, a </item>
        <item>It\'s the magnificent </item>
        <item>Too slow it\'s </item>
        <item>I\'ve got you beat it\'s </item>
        <item>All that data consumed has made me too strong to beat it\'s </item>
        <item>You\'ve fallen victim to one of the classic blunders, it\'s </item>
        <item>I\'m going to Gogh ahead and guess </item>
        <item>I\'m right on the monet, it\'s </item>
        <item>According to my calculations it\'s </item>
        <item>I\'ve scoured a billion sources to find out it\'s </item>
    </string-array>

    <string name="ai_win">Victory! I\'ve got it! The word is </string>
    <string name="ai_lose">You\'ve bested me this time.</string>


    <!-- Shared Prefs -->
    <string name="sp_key">GUESSIT</string>
    <string name="sp_sound">SOUND</string>
    <string name="sp_music">MUSIC</string>
    <string name="sp_wins">WINS</string>
    <string name="sp_losses">LOSSES</string>
    <string name="sp_ties">TIES</string>
    <string name="sp_games_played">GAMES_PLAYED</string>
    <string name="sp_time">TIME</string>
    <string name="sp_amount_of_rounds">AMOUNT_TOF_ROUNDS</string>
    <string name="sp_current_amount_of_rounds">CURRENT_AMOUNT_OF_ROUNDS</string>

</resources>