<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paper"
    tools:context=".StatsActivity">

    <include layout="@layout/custom_toolbar" />

    <TextView
        android:id="@+id/winsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
    <TextView
        android:id="@+id/winsValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/annie_use_your_telescope"
        android:text="@string/stats_wins"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/winsValue"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    android:fontFamily="@font/annie_use_your_telescope"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginTop="132dp"
        android:layout_weight="1"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/winsLabel"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/lossesValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_weight="1"
        android:fontFamily="@font/annie_use_your_telescope"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toEndOf="@+id/lossesLabel"
        app:layout_constraintTop_toBottomOf="@+id/winsValue" />

    <TextView
        android:id="@+id/lossesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_weight="1"
        android:fontFamily="@font/annie_use_your_telescope"
        android:text="@string/stats_losses"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/lossesValue"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winsLabel" />


    <TextView
        android:id="@+id/tiesValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_weight="1"
        android:fontFamily="@font/annie_use_your_telescope"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toEndOf="@+id/tiesLabel"
        app:layout_constraintTop_toBottomOf="@+id/lossesValue" />

    <TextView
        android:id="@+id/tiesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_weight="1"
        android:fontFamily="@font/annie_use_your_telescope"
        android:text="@string/stats_ties"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/tiesValue"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lossesLabel" />

    <TextView
        android:id="@+id/avgTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_weight="1"
        android:fontFamily="@font/annie_use_your_telescope"
        android:text="@string/stats_avg_time"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/avgTimeValue"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiesLabel" />

    <TextView
        android:id="@+id/avgTimeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_weight="1"
        android:fontFamily="@font/annie_use_your_telescope"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toEndOf="@+id/avgTimeLabel"
        app:layout_constraintTop_toBottomOf="@+id/tiesValue" />


    <TextView
        android:id="@+id/gamesPlayedValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_weight="1"
        android:fontFamily="@font/annie_use_your_telescope"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toEndOf="@+id/gamesPlayedLabel"
        app:layout_constraintTop_toBottomOf="@+id/avgTimeValue" />

    <TextView
        android:id="@+id/gamesPlayedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_weight="1"
        android:fontFamily="@font/annie_use_your_telescope"
        android:text="@string/stats_games_played"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/gamesPlayedValue"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avgTimeLabel" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#434343"
        android:fontFamily="@font/annie_use_your_telescope"
        android:onClick="onHomeButtonClick"
        android:text="@string/stats_home"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>